# elan-pretty

./: .gitignore  README.md  index.html  main.py  pear_harikumarigurung_05082025_post.eaf  pyproject.toml
config/: sample.multispeaker.tiers.yaml  sample.tiers.yaml
docs/: architecture.md  aws_ec2_telegram.md  hetzner_static_site.md
examples/output/: pear_harikumarigurung_05082025_post.html  pear_harikumarigurung_05082025_post.json
examples/output/assets/: elan-pretty.css
mappings/: gurung-w4r.yaml
published/: index.html
published/pear_harikumarigurung_05082025_post/: pear_harikumarigurung_05082025_post.json
published/pear_harikumarigurung_05082025_post-2635f7ba6b/: index.html  pear_harikumarigurung_05082025_post-2635f7ba6b.json
published/pear_harikumarigurung_05082025_post-2ffae5b0b8/: index.html  pear_harikumarigurung_05082025_post-2ffae5b0b8.json
published/pear_harikumarigurung_05082025_post-6656b6f2d1/: index.html  pear_harikumarigurung_05082025_post-6656b6f2d1.json
published/pear_harikumarigurung_05082025_post-db19150fa5/: index.html  pear_harikumarigurung_05082025_post-db19150fa5.json
src/elan_pretty/: __init__.py  cli.py  config.py  github_pages.py  mapping_registry.py  models.py  normalize.py  parser.py  publishing.py  raw.py  tier_detection.py  utils.py
src/elan_pretty/bot/: __init__.py  telegram_bot.py
src/elan_pretty/render/: __init__.py  html.py  pdf.py
tests/: test_bot_mapping.py  test_github_pages.py  test_pdf.py  test_pipeline.py  test_tier_detection.py
tests/fixtures/: minimal.eaf  two_speakers.eaf
(+2 files in other folders)
