[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elan-pretty"
version = "0.1.0"
description = "Render ELAN EAF linguistic annotations as publication-quality interlinear glossed text."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ELAN Pretty contributors" }]
license = { text = "MIT" }
dependencies = [
  "jinja2>=3.1",
  "lxml>=5.2",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
test = ["pytest>=8.0"]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8.0"]

[project.scripts]
elan-pretty = "elan_pretty.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
elan_pretty = [
  "render/templates/*.j2",
  "render/static/*.css",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
